Remove support for legacy endpoints in public